--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,7 @@ python:
     - requirements: docs/docs-requirements.txt
     - requirements: requirements.txt
     - method: pip
-    - path: .
+      path: .
 
 sphinx:
   configuration: docs/conf.py
